---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 4.0.5
Date: 2024-11-06
  Bugfixes:
    - Fixed tiles getting removed from created/updated blueprints when using unapproved ghosts.
    - Fixed crash when using super-forced build on top of unapproved ghosts. Performance issues can be encountered when working with blueprint books due to modding API limitations. A warning will be reported to player if the implemented workaround was not sufficient.
---------------------------------------------------------------------------------------------------
Version: 4.0.4
Date: 2024-11-01
  Bugfixes:
    - Fixed crash when modifying undo stack that contains actions without direct target (like adding wire or building a tile).
---------------------------------------------------------------------------------------------------
Version: 4.0.3
Date: 2024-11-01
  Bugfixes:
    - Fixed crash when technology is researched with a force that has not created any unapproved ghosts yet.
---------------------------------------------------------------------------------------------------
Version: 4.0.2
Date: 2024-10-31
  Bugfixes:
    - Fixed missing recipes in machines for unapproved ghost force.
---------------------------------------------------------------------------------------------------
Version: 4.0.1
Date: 2024-10-27
  Bugfixes:
    - Fixed crash when running migrations for storing approval badges as objects.
---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: 2024-10-26
  Changes:
    - Dropped support for game version 1.1.
    - Deconstruction planners from library are now fully supported for deconstructing unapproved ghosts.